k8s/baseinfr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-dep
spec:
  selector:
    matchLabels:
      app: mssql-dep
  replicas: 1
  template:
    metadata:
      labels:
        app: mssql-dep
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2019-latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1433
              name: web
---
apiVersion: v1
kind: Service
metadata:
  name: mssql
spec:
  type: NodePort
  selector:
    app: mssql-dep
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
      nodePort: 30003
      name: tcp-mssql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-dep
spec:
  selector:
    matchLabels:
      app: redis-dep
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-dep
    spec:
      containers:
        - name: redis
          image: redis:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
              name: web
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis-dep
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
      name: tcp-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-dep
spec:
  selector:
    matchLabels:
      app: rabbitmq-dep
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbitmq-dep
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5672
              name: web
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    app: rabbitmq-dep
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
      name: tcp-rabbitmq
