k8s/debug.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway-dep-v1
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: apigateway-pod
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: apigateway-pod
        version: v1
    spec:
      containers:
        - name: web
          image: apigateway:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /app
              name: v1
            - mountPath: /remote_debugger:rw
              name: v2
      volumes:
        - name: v1
          hostPath:
            path: /e/dotnet_project/Oxygen-EshopSample/ApiGateWay/bin/Debug/netcoreapp3.1
        - name: v2
          hostPath:
            path: /c/Users/Administrator/vsdbg/vs2017u5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway-dep-v2
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: apigateway-pod
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: apigateway-pod
        version: v2
    spec:
      containers:
        - name: web
          image: apigateway:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /app
              name: v1
            - mountPath: /remote_debugger:rw
              name: v2
      volumes:
        - name: v1
          hostPath:
            path: /e/dotnet_project/Oxygen-EshopSample/ApiGateWay/bin/Debug/netcoreapp3.1
        - name: v2
          hostPath:
            path: /c/Users/Administrator/vsdbg/vs2017u5
---
apiVersion: v1
kind: Service
metadata:
  name: apigateway
spec:
  selector:
    app: apigateway-pod
  ports:
  - port: 80 
    targetPort: 80
    name: http-apigateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobrunner-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobrunner-pod
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: jobrunner-pod
        version: v1
    spec:
      containers:
        - name: web
          image: jobrunner:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /app
              name: v1
            - mountPath: /remote_debugger:rw
              name: v2
      volumes:
        - name: v1
          hostPath:
            path: /e/dotnet_project/Oxygen-EshopSample/Services/CommonService/JobRunner/bin/Debug/netcoreapp3.1
        - name: v2
          hostPath:
            path: /c/Users/Administrator/vsdbg/vs2017u5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice-dep-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice-pod
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: userservice-pod
        version: v1
    spec:
      containers:
        - name: web
          image: userservice:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /app
              name: v1
            - mountPath: /remote_debugger:rw
              name: v2
      volumes:
        - name: v1
          hostPath:
            path: /e/dotnet_project/Oxygen-EshopSample/Services/UserService/User.Host/bin/Debug/netcoreapp3.1
        - name: v2
          hostPath:
            path: /c/Users/Administrator/vsdbg/vs2017u5
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice-dep-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice-pod
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: userservice-pod
        version: v2
    spec:
      containers:
        - name: web
          image: userservice:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /app
              name: v1
            - mountPath: /remote_debugger:rw
              name: v2
      volumes:
        - name: v1
          hostPath:
            path: /e/dotnet_project/Oxygen-EshopSample/Services/UserService/User.Host/bin/Debug/netcoreapp3.1
        - name: v2
          hostPath:
            path: /c/Users/Administrator/vsdbg/vs2017u5
---
apiVersion: v1
kind: Service
metadata:
  name: userservice
spec:
  selector:
    app: userservice-pod
  ports:
  - port: 80 
    targetPort: 80 
    name: http2-userservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tradeservice-dep
  labels:
    app: tradeservice-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tradeservice-pod
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: tradeservice-pod
        version: v1
    spec:
      containers:
        - name: web
          image: tradeservice:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /app
              name: v1
            - mountPath: /remote_debugger:rw
              name: v2
      volumes:
        - name: v1
          hostPath:
            path: /e/dotnet_project/Oxygen-EshopSample/Services/TradeService/Trade.Host/bin/Debug/netcoreapp3.1
        - name: v2
          hostPath:
            path: /c/Users/Administrator/vsdbg/vs2017u5
---
apiVersion: v1
kind: Service
metadata:
  name: tradeservice
spec:
  selector:
    app: tradeservice-pod
  ports:
  - port: 80 
    targetPort: 80 
    name: http2-tradeservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goodsservice-dep
  labels:
    app: goodsservice-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goodsservice-pod
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: goodsservice-pod
        version: v1
    spec:
      containers:
        - name: web
          image: goodsservice:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /app
              name: v1
            - mountPath: /remote_debugger:rw
              name: v2
      volumes:
        - name: v1
          hostPath:
            path: /e/dotnet_project/Oxygen-EshopSample/Services/GoodsService/Goods.Host/bin/Debug/netcoreapp3.1
        - name: v2
          hostPath:
            path: /c/Users/Administrator/vsdbg/vs2017u5
---
apiVersion: v1
kind: Service
metadata:
  name: goodsservice
spec:
  selector:
    app: goodsservice-pod
  ports:
  - port: 80 
    targetPort: 80 
    name: http2-goodsservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice-dep
  labels:
    app: orderservice-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderservice-pod
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: orderservice-pod
        version: v1
    spec:
      containers:
        - name: web
          image: orderservice:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /app
              name: v1
            - mountPath: /remote_debugger:rw
              name: v2
      volumes:
        - name: v1
          hostPath:
            path: /e/dotnet_project/Oxygen-EshopSample/Services/OrderService/Order.Host/bin/Debug/netcoreapp3.1
        - name: v2
          hostPath:
            path: /c/Users/Administrator/vsdbg/vs2017u5
---
apiVersion: v1
kind: Service
metadata:
  name: orderservice
spec:
  selector:
    app: orderservice-pod
  ports:
  - port: 80 
    targetPort: 80 
    name: http2-orderservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dep
  labels:
    app: frontend-dep
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: frontend-pod
  minReadySeconds: 5 
  strategy: 
    type: RollingUpdate 
    rollingUpdate:
      maxUnavailable: 1 
      maxSurge: 1
  template: 
    metadata:
      labels: 
        app: frontend-pod
        version: v1
    spec:
      containers:
        - name: web
          image: frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service 
metadata:
  name: frontend
spec:
  selector:
    app: frontend-pod
  ports:
  - port: 80 
    targetPort: 80
    name: http-frontend
